<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="csi.fhict.org.csi_week_1.MainActivity"
    android:background="#000000">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:text="@string/take_picture"
        android:id="@+id/btnTakePicture"
            style="@style/ButtonTakePicture" />

        <Button
            android:text="@string/gps_location"
            android:id="@+id/btnGPSPosition"
            style="@style/ButtonGPSLocation" />
    </RelativeLayout>


    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/images"
        android:contentDescription="@string/description" />

    <Button
        android:text="@string/call_133"
        android:id="@+id/btnCall133"
        style="@style/ButtonCall133" />



</LinearLayout>

    <Button
        android:text="@string/back"
        android:id="@+id/btnBack"
        style="@style/ButtonBack" />

    <Button
        android:text="@string/send"
        android:id="@+id/btnSend"
        style="@style/ButtonSend" />

</RelativeLayout>
